syntax = "proto3";

package ci.monitoring.infra_check_events;

import "tasklet/api/tasklet.proto";
import "tasklet/services/ci/proto/ci.proto";
import "ci/tasklet/common/proto/service.proto";
import "ci/tasklet/registry/common/monitoring/infra_create/proto/infra_create.proto";

message Config {
    message EventsFilter {
        infra_create.InfraPlacement placement = 1;
        infra_create.InfraStatus status = 2;
    }

    repeated EventsFilter filters = 1; // filtering by OR
    bool wait_for_finish = 2;
    string time_before_infra_event = 3;
}

message Input {
    Config config = 3;
    ci.TaskletContext context = 5;
}

message Output {
}

message InfraCheckEventsContext {
    option (tasklet.context) = true;

    ci.CiService ci = 1 [(tasklet.inject) = true];
}

message InfraCheckEvents {
    option (tasklet.tasklet_interface) = true;

    InfraCheckEventsContext ctx = 1;
    Input input = 2 [(tasklet.input) = true];
    Output output = 3 [(tasklet.output) = true];
}
